--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,16 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency directories
 node_modules
 dist
 dist-ssr
 *.local
+
+# Environment files
+.env
+.env.local
+.env.*.local
 
 # Editor directories and files
 .vscode/*
@@ -22,5 +28,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
 .vercel
