--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
+    "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -21,6 +23,7 @@
     "react-router-dom": "^7.4.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "tailwindcss": "^4.1.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
